--- a/README
+++ b/README
@@ -1,74 +1,58 @@
 NAME
-    Pod::Cpandoc - perldoc that works for modules you don't have installed
+    Pod::Minicpandoc - perldoc that works for modules you don't have
+    installed
 
 SYNOPSIS
-        cpandoc File::Find
+        minicpandoc File::Find
             -- shows the documentation of your installed File::Find
 
-        cpandoc Acme::BadExample
+        minicpandoc Acme::BadExample
             -- works even if you don't have Acme::BadExample installed!
 
-        cpandoc -v '$?'
+        minicpandoc -v '$?'
             -- passes everything through to regular perldoc
 
-        cpandoc -m Acme::BadExample | grep system
+        minicpandoc -m Acme::BadExample | grep system
             -- options are respected even if the module was scraped
 
-        vim `cpandoc -l Web::Scraper`
+        vim `minicpandoc -l Web::Scraper`
             -- getting the idea yet?
 
-        cpandoc http://darkpan.org/Eval::WithLexicals::AndGlobals
+        minicpandoc http://darkpan.org/Eval::WithLexicals::AndGlobals
             -- URLs work too!
 
 DESCRIPTION
-    "cpandoc" is a perl script that acts like "perldoc" except that if it
-    would have bailed out with "No documentation found for
-    "Uninstalled::Module"", it will instead scrape a CPAN index for the
-    module's documentation.
+    "minicpandoc" is a perl script that acts like "perldoc" except that if
+    it would have bailed out with "No documentation found for
+    "Uninstalled::Module"", it will instead consult your minicpan, or scrape
+    a CPAN index for the module's documentation if that doesn't work. It is
+    a fork of cpandoc, with added support for consulting a minicpan.
 
-    One important feature of "cpandoc" is that it *only* scrapes the live
-    index if you do not have the module installed. So if you use "cpandoc"
-    on a module you already have installed, then it will just read the
-    already-installed documentation. This means that the version of the
-    documentation matches up with the version of the code you have. As a
-    fringe benefit, "cpandoc" will be fast for modules you've installed. :)
+    One important feature of "minicpandoc" is that it *only* scrapes the
+    live index if you do not have the module installed and if it cannot grab
+    it from your minicpan. So if you use "minicpandoc" on a module you
+    already have installed, then it will just read the already-installed
+    documentation. This means that the version of the documentation matches
+    up with the version of the code you have. As a fringe benefit,
+    "minicpandoc" will be fast for modules you've installed. :)
 
-    All this means that you should be able to drop in "cpandoc" in place of
-    "perldoc" and have everything keep working. See "SNEAKY INSTALL" for how
-    to do this.
+    All this means that you should be able to drop in "minicpandoc" in place
+    of "perldoc" and have everything keep working.
 
-    If you set the environment variable "CPANDOC_FETCH" to a true value,
-    then we will print a message to STDERR telling you that "cpandoc" is
+    If you set the environment variable "MINICPANDOC_FETCH" to a true value,
+    then we will print a message to STDERR telling you that "minicpandoc" is
     going to make a request against the live CPAN index.
 
-TRANSLATIONS
-    Japanese
-            Japanese documentation can be found at
-            L<http://perldoc.jp/docs/modules/Pod-Cpandoc-0.09/Cpandoc.pod>,
-            contributed by @bayashi.
-
-SNEAKY INSTALL
-        cpanm Pod::Cpandoc
-
-        then: alias perldoc=cpandoc
-        or:   function perldoc () { cpandoc "$@" }
-
-        Now `perldoc Acme::BadExample` works!
-
-    "perldoc" should continue to work for everything that you're used to,
-    since "cpandoc" passes all options through to it. "cpandoc" is merely a
-    subclass that falls back to scraping a CPAN index when it fails to find
-    your queried file in @INC.
-
 SEE ALSO
-    The sneaky install was inspired by <https://github.com/defunkt/hub>.
-
-    <http://tech.bayashi.jp/archives/entry/perl-module/2011/003305.html>
-
-    <http://sartak.org/talks/yapc-na-2011/cpandoc/>
+    Pod::Cpandoc, CPAN::Mini
 
 AUTHOR
-    Shawn M Moore "sartak@gmail.com"
+    Shawn M Moore "sartak@gmail.com" (original implementation) Rob Hoelz
+    "rob@hoelz.ro" (minicpan support)
+
+THANKS
+    Many thanks to Shawn M Moore, for writing Pod::Cpandoc and giving me
+    something base this on!
 
 COPYRIGHT
     Copyright 2011 Shawn M Moore.
