--- a/README
+++ b/README
@@ -3,44 +3,44 @@ NAME
     installed
 
 SYNOPSIS
-        minicpandoc File::Find
+        mcpandoc File::Find
             -- shows the documentation of your installed File::Find
 
-        minicpandoc Acme::BadExample
+        mcpandoc Acme::BadExample
             -- works even if you don't have Acme::BadExample installed!
 
-        minicpandoc -v '$?'
+        mcpandoc -v '$?'
             -- passes everything through to regular perldoc
 
-        minicpandoc -m Acme::BadExample | grep system
+        mcpandoc -m Acme::BadExample | grep system
             -- options are respected even if the module was scraped
 
-        vim `minicpandoc -l Web::Scraper`
+        vim `mcpandoc -l Web::Scraper`
             -- getting the idea yet?
 
-        minicpandoc http://darkpan.org/Eval::WithLexicals::AndGlobals
+        mcpandoc http://darkpan.org/Eval::WithLexicals::AndGlobals
             -- URLs work too!
 
 DESCRIPTION
-    "minicpandoc" is a perl script that acts like "perldoc" except that if
-    it would have bailed out with "No documentation found for
+    "mcpandoc" is a perl script that acts like "perldoc" except that if it
+    would have bailed out with "No documentation found for
     "Uninstalled::Module"", it will instead consult your minicpan, or scrape
     a CPAN index for the module's documentation if that doesn't work. It is
     a fork of cpandoc, with added support for consulting a minicpan.
 
-    One important feature of "minicpandoc" is that it *only* scrapes the
-    live index if you do not have the module installed and if it cannot grab
-    it from your minicpan. So if you use "minicpandoc" on a module you
-    already have installed, then it will just read the already-installed
+    One important feature of "mcpandoc" is that it *only* scrapes the live
+    index if you do not have the module installed and if it cannot grab it
+    from your minicpan. So if you use "mcpandoc" on a module you already
+    have installed, then it will just read the already-installed
     documentation. This means that the version of the documentation matches
     up with the version of the code you have. As a fringe benefit,
-    "minicpandoc" will be fast for modules you've installed. :)
+    "mcpandoc" will be fast for modules you've installed. :)
 
-    All this means that you should be able to drop in "minicpandoc" in place
-    of "perldoc" and have everything keep working.
+    All this means that you should be able to drop in "mcpandoc" in place of
+    "perldoc" and have everything keep working.
 
     If you set the environment variable "MINICPANDOC_FETCH" to a true value,
-    then we will print a message to STDERR telling you that "minicpandoc" is
+    then we will print a message to STDERR telling you that "mcpandoc" is
     going to make a request against the live CPAN index.
 
 SEE ALSO
@@ -55,7 +55,7 @@ THANKS
     something base this on!
 
 COPYRIGHT
-    Copyright 2011 Shawn M Moore.
+    Copyright 2011 Robert Hoelz.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
