--- a/README
+++ b/README
@@ -39,7 +39,7 @@ DESCRIPTION
     All this means that you should be able to drop in "mcpandoc" in place of
     "perldoc" and have everything keep working.
 
-    If you set the environment variable "MINICPANDOC_FETCH" to a true value,
+    If you set the environment variable "MCPANDOC_FETCH" to a true value,
     then we will print a message to STDERR telling you that "mcpandoc" is
     going to make a request against the live CPAN index.
 
