Put authors on one line

--- a/README
+++ b/README
@@ -58,7 +58,7 @@ SEE ALSO
     <http://sartak.org/talks/yapc-na-2011/cpandoc/>
 
 AUTHOR
-    Shawn M Moore "sartak@gmail.com" (original implementation) Rob Hoelz
+    Shawn M Moore "sartak@gmail.com" (original implementation), Rob Hoelz
     "rob@hoelz.ro" (minicpan support)
 
 THANKS
