--- a/README
+++ b/README
@@ -40,11 +40,25 @@ DESCRIPTION
     "mcpandoc" will be fast for modules you've installed. :)
 
     All this means that you should be able to drop in "mcpandoc" in place of
-    "perldoc" and have everything keep working.
+    "perldoc" and have everything keep working. See "SNEAKY INSTALL" for how
+    to do this.
 
     If you set the environment variable "MCPANDOC_FETCH" to a true value,
     then we will print a message to STDERR telling you that "mcpandoc" is
     going to make a request against the live CPAN index.
+
+SNEAKY INSTALL
+        cpanm Pod::Minicpandoc
+
+        then: alias perldoc=mcpandoc
+        or:   function perldoc () { mcpandoc "$@" }
+
+        Now `perldoc Acme::BadExample` works!
+
+    "perldoc" should continue to work for everything that you're used to,
+    since "mcpandoc" passes all options through to it. "mcpandoc" is merely
+    a subclass that falls back to scraping a CPAN index when it fails to
+    find your queried file in @INC.
 
 SEE ALSO
     Pod::Cpandoc, CPAN::Mini
